# trial-matching-assistant

./: .dockerignore  .env.example  .env.production  .gitignore  DOCKER_GUIDE.md  Dockerfile  Dockerfile.allinone  Dockerfile.greennode  Dockerfile.prod  README.md  RUNPOD_DEPLOYMENT.md  build-allinone.sh  docker-compose.prod.yml  docker-compose.yml  docker-manage.sh  langgraph.json  pyproject.toml  quick-start.sh  test_workflow_location.py
.chainlit/: config.toml
.chainlit/translations/: vi-VN.json
benchmark/: 01_trial_matching.py  01_trial_matching_comparison.py  02_trial_summarize.py  03_trial_eligibility.py  04_trial_explain_criteria.py  05_trial_translate_terms.py  06_trial_compare.py  competitor_agent.py  create_datasets.py  generate_report.py  llm_judge_prompt.txt  llm_judge_summarize_prompt.txt  plot_results.py  token_tracking.py  translate_data.py  trial_compare.py  trial_eligibility.py  trial_explain_criteria.py  trial_matching.py  trial_summarize.py  trial_translate_terms.py  utilis.py  xml_data_utils.py
benchmark/datasets/: 01_matching_dataset.json  02_summarize_dataset.json  03_eligibility_dataset.json  04_explain_criteria_dataset.json  05_translate_terms_dataset.json  06_compare_trials_dataset.json
benchmark/prompts/: 01_llm_judge_prompt.txt  (+12 more)
data_pipeline/: README.md  config.yaml  create_materialized_view.py  download_aact.py  download_trec_trials.py  import_aact_data.sh  import_aact_data_docker.sh  import_trec_trials_es.py  pipeline.py  sql2es.py  sql2es_optimized.py
docs/: benchmarks.md  data_pipeline.md  system_design.md  workflow_logic.md
public/: custom.css  theme.json
test/: test_llm_speed.py  test_location_search.py  test_workflow.py
(+61 files in other folders)
