[project]
name = "clinical-trial-assistant"
version = "1.0.0"
description = "AI-powered assistant for clinical trial matching using workflow."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "elasticsearch==7.17.9",
    "fastapi>=0.122.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "langgraph-cli[inmem]>=0.4.7",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
api = "src.api.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
indent-width = 4
fix = true

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "broad-exception-caught",
    "logging-fstring-interpolation",
    "line-too-long"
]

